Added Redux, Firebase, Routing

--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer base{
-    html, body, #root {
-        @apply h-full bg-zinc-50
-    }
+@layer base {
+  html,
+  body,
+  #root {
+    @apply h-full bg-zinc-50;
+  }
 }
